RESOLVED FIXED105140
[Chromium] Dragging a .jpg to Finder saves it as .jpeg
https://bugs.webkit.org/show_bug.cgi?id=105140
Summary [Chromium] Dragging a .jpg to Finder saves it as .jpeg
Avi Drissman
Reported 2012-12-16 16:34:17 PST
https://code.google.com/p/chromium/issues/detail?id=35811 This is a bug in the Chromium code in WebKit.
Attachments
fix (2.59 KB, patch)
2012-12-16 17:49 PST, Avi Drissman
tony: review+
fix nits (2.57 KB, patch)
2012-12-17 12:50 PST, Avi Drissman
no flags
Avi Drissman
Comment 1 2012-12-16 16:34:33 PST
What steps will reproduce the problem? 1. Load an image with the .jpg extension. 2. Drag it to the desktop or a finder window. What is the expected result? Image should be saved with the same extension (.jpg). What happens instead? Image is saved with a .jpeg extension.
Avi Drissman
Comment 2 2012-12-16 17:49:53 PST
Tony Chang
Comment 3 2012-12-17 12:17:12 PST
Comment on attachment 179672 [details] fix View in context: https://bugs.webkit.org/attachment.cgi?id=179672&action=review > Source/WebCore/platform/chromium/ClipboardChromium.cpp:387 > + // Keep the existing extension if it is valid for the MIME type of the > + // image, and replace it if it is not. Nit: I think WebKit style would not include this comment since it's describing the code below.
Tony Chang
Comment 4 2012-12-17 12:19:14 PST
Comment on attachment 179672 [details] fix View in context: https://bugs.webkit.org/attachment.cgi?id=179672&action=review > Source/WebCore/ChangeLog:12 > + > + * platform/chromium/ClipboardChromium.cpp: There should be a sentence here explaining why there's no LayoutTest. You can say it's not possible since it involves dragging to the desktop. If you wanted to be more thorough, you could add a test to ManualTests.
Avi Drissman
Comment 5 2012-12-17 12:50:15 PST
Created attachment 179783 [details] fix nits
WebKit Review Bot
Comment 6 2012-12-17 13:29:20 PST
Comment on attachment 179783 [details] fix nits Clearing flags on attachment: 179783 Committed r137934: <http://trac.webkit.org/changeset/137934>
WebKit Review Bot
Comment 7 2012-12-17 13:29:23 PST
All reviewed patches have been landed. Closing bug.
noel gordon
Comment 8 2012-12-17 14:42:54 PST
(In reply to comment #4) > There should be a sentence here explaining why there's no LayoutTest. You can say it's not possible since it involves dragging to the desktop. If you wanted to be more thorough, you could add a test to ManualTests. Would a JPEG variant of fast/events/drag-image-filename.html work?
Note You need to log in before you can comment on or make changes to this bug.