Dragging a .jpg to Finder saves it as .jpeg https://bugs.webkit.org/show_bug.cgi?id=105140 https://code.google.com/p/chromium/issues/detail?id=35811

Patch by Avi Drissman <avi@chromium.org> on 2012-12-17
Reviewed by Tony Chang.

If the filename's extension is already valid for the MIME type, we don't
need to rewrite it to the preferred extension.

No layout tests because it involves dragging items to the desktop.

* platform/chromium/ClipboardChromium.cpp:
(WebCore::writeImageToDataObject):

Canonical link: https://commits.webkit.org/123446@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137934 268f45cc-cd09-0410-ab3c-d52691b4dbfc